salesforce/force-app/main/default/objects/Compliance_Domain__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>When false, the domain is hidden from the intake selector without deleting the record.</description>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>