salesforce/force-app/main/default/objects/Compliance_Domain__mdt/fields/Default_Selected__c.field-meta.xml
<CustomField>
    <fullName>Default_Selected__c</fullName>
    <description>When true, this domain is pre-selected on the intake screen before /scope has auto-detected applicable domains. Use for universally-applicable domains (finance, trade, general).</description>
    <label>Default Selected</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>