salesforce/force-app/main/default/objects/Compliance_Domain__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short explanation of what this domain governs and how it is verified. Surfaced as tooltip/help on the intake selector.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>