salesforce/force-app/main/default/objects/Compliance_Domain__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Sort order for the domain tags on the intake screen (ascending).</description>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>