salesforce/force-app/main/default/objects/Compliance_Domain__mdt/fields/Domain_Key__c.field-meta.xml
<CustomField>
    <fullName>Domain_Key__c</fullName>
    <description>Stable slug that joins this domain across layers. MUST match the Python RAG corpus domain key (quality, conflict, material, cyber, trade, finance, general) and the values written into Account.Risk_Domains__c by /scope.</description>
    <label>Domain Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>