salesforce/force-app/main/default/objects/Compliance_Domain__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Human-readable domain name shown as a selectable tag on the intake screen.</description>
    <label>Display Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>