salesforce/force-app/main/default/objects/Compliance_Domain__mdt/fields/Verifier_Authority__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Authority__c</fullName>
    <description>The authoritative registry/body this domain is primarily verified against (e.g. IATF / IAF CertSearch, RMI, GLEIF / RapidRatings, OpenSanctions, TISAX / CMMC, Manual). Links the domain to its Compliance_Verification_Source__mdt records.</description>
    <label>Verifier Authority</label>
    <length>120</length>
    <type>Text</type>
</CustomField>